--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,6 @@ job:
     # Run our tests
     - name: Test with PyTest
       run: |
-        pytest --cov=inflamation.models test_models.py 
+        # pytest --cov=inflamation.models test_models.py
+        pytest test_models.py 
     
